# rimuruAI

./: .gitignore  AGENTS.md  README.md  allfiles.txt  test_gemini.py
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-12-raphael-integrations-refactor.md  2026-04-12-raphael.md  2026-04-12-settings-page.md  2026-04-13-dynamic-tool-registry.md  2026-04-13-google-oauth-gmail.md  2026-04-13-knowledge-graph-summary.md  2026-04-13-knowledge-graph.md  2026-04-14-tauri-migration.md
docs/superpowers/specs/: 2026-04-12-raphael-design.md  2026-04-12-settings-page-design.md
raphael/: ISSUES.md  README.md  TASKS.md  index.html  package-lock.json  package.json  raphael.config.json  tsconfig.json  vite.config.ts
raphael/docs/: integration.md
raphael/docs/architectural_plans/: frontend_mcp_transport_plan.md
raphael/prompts/: 19_simplify_skill.md
raphael/src/: App.tsx  index.css
raphael/src-tauri/: Cargo.toml  tauri.conf.json
raphael/src-tauri/capabilities/: default.json
raphael/src-tauri/docs/memory/: memory_log.md
raphael/src-tauri/icons/: icon.icns
raphael/src-tauri/src/: chunk_store.rs  commands.rs  gmail_api.rs  google_oauth.rs  graph.rs  graph_cache.rs  lib.rs  main.rs  resource_engine.rs  search.rs  secure_store.rs  shell_exec.rs
raw/: groq.txt  tauri-v2.txt  tavily.txt
words-of-world/: CLAUDE.md  Makefile  Package.swift  README.md  design.md  issues.txt  package-lock.json  package.json  project.yml  tailwind.config.js
words-of-world-tauri/: package-lock.json
words-of-world-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
words-of-world/WordsOfWorld/: AppDelegate.swift  GroqTranscriber.swift  HotkeyManager.swift  Info.plist  MenuBarController.swift  PasteInjector.swift  PreferencesWindowController.swift  RecorderManager.swift  TextProcessor.swift  WordsOfWorldApp.swift
words-of-world/WordsOfWorld.xcodeproj/: project.pbxproj
words-of-world/WordsOfWorldTests/: KeychainManagerTests.swift  PlaceholderTests.swift
words-of-world/scripts/: build-app.sh
words-of-world/src/: app.css
words-of-world/src-tauri/: entitlements.plist
(+76 files in other folders)
