[package]
name = "raphael"
version = "0.1.0"
edition = "2021"

[lib]
name = "raphael_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
chrono = "0.4"
lettre = { version = "0.11", default-features = false, features = [
  "smtp-transport",
  "rustls-tls",
  "builder",
  "hostname",
] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
