[package]
name = "raphael"
version = "0.1.0"
edition = "2021"

[lib]
name = "raphael_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
better-auth = { version = "0.10", features = ["axum"] }
oauth2 = "4"
axum = "0.8"
base64 = "0.22"
url = "2"
urlencoding = "2"
